# HABIT

./: .gitignore  .pre-commit-config.yaml  CONFIG_TEMPLATES_REBUILT.md  DESIGN_PHILOSOPHY.md  DOCS_STRUCTURE.md  GEMINI.md  GEMINI_zh.md  HABIT-win-py310-gpu-v0.1.0.tar.gz.baiduyun.uploading.cfg  HABIT_CLI.md  INSTALL.md  INSTALL_en.md  LICENSE  LOG_REFACTOR_SUMMARY.md  MANIFEST.in  ML_IMPROVEMENTS.md  MODEL_COMPARISON_ANALYSIS.md  QUICKSTART.md  README.md  README_en.md  REFACTORING_TODO.md  RESTRUCTURE_SUMMARY.md  SUPERVOXEL_REFACTORING_SUMMARY.md  TESTING.md  TODO.txt  UPDATES_SUMMARY.md  app_extracting_habitat_features.py  app_getting_habitat_map.py  app_habitat_test_retest_mapper.py  app_icc_analysis.py  app_model_comparison_plots.py  app_of_machine_learning.py  bucket_analysis.json  cleanup_old_icc.py  cleanup_old_icc_files.py  code_statistics.json  config_kmeans.yaml  config_model_comparison.yaml  count_lines.py  debug.txt  del_some_dir.py  (+30 more)
.github/: CODEOWNERS
conda_pack/: install_gpu_torch.cmd  requirements-gpu-torch-only.txt  setup_habit.bat  stage_external_tools.bat
config/: HOW_TO_CREATE_CONFIG_DOCS.md  README_CONFIG.md  config_extract_features.yaml  config_getting_habitat.yaml  config_getting_habitat_CN.yaml  config_getting_habitat_EN.yaml  config_icc_analysis.yaml  config_image_preprocessing.yaml  config_image_preprocessing_dcm2nii.yaml  config_kmeans.yaml  config_machine_learning.yaml  config_machine_learning_kfold.yaml  config_model_comparison.yaml  config_traditional_radiomics.yaml  default_params.yaml  image_files.yaml  parameter.yaml  parameter_habitat.yaml  params_voxel_radiomics.yaml
config_templates/: README.md  config_extract_features_annotated.yaml  config_getting_habitat_annotated.yaml  config_habitat_one_step_example.yaml  config_icc_analysis_annotated.yaml  config_image_preprocessing_annotated.yaml  config_image_preprocessing_dcm2nii_annotated.yaml  config_image_preprocessing_sort_dicom_annotated.yaml  config_machine_learning_annotated.yaml  config_machine_learning_kfold_annotated.yaml  config_model_comparison_annotated.yaml  config_traditional_radiomics_annotated.yaml
demo_data/: config_dicom_sort_gui.yaml  config_extract_features.yaml  config_habitat.yaml  config_habitat_direct_pooling.yaml  config_habitat_direct_pooling_predict.yaml  config_habitat_one_step.yaml  config_habitat_one_step_predict.yaml  config_habitat_two_step - 副本.yaml  config_habitat_two_step.yaml  config_habitat_two_step_predict.yaml  config_icc.yaml  config_machine_learning_clinical.yaml  config_machine_learning_kfold.yaml  config_machine_learning_predict.yaml  config_machine_learning_radiomics.yaml  config_model_comparison.yaml  config_predict.yaml  config_preprocessing.yaml  config_test_retest.yaml  file_habitat.yaml  (+5 more)
(+2464 files in other folders)
