[tool.poetry]
name = "HABIT"
version = "0.1.0"
description = "Habitat Analysis: Biomedical Imaging Toolkit"
authors = ["lichao19870617@163.com"]
readme = "README.md"

[tool.poetry.scripts]
habit = "habit.cli:cli"

[tool.poetry.dependencies]
python = "^3.8"
click = "^8.0"


[tool.poetry.dev-dependencies]
pytest = "^6.2.5"
black = "^21.5b2"
mypy = "^0.910"
pylint = "^2.9.0"
pre-commit = "^2.13.0"

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.black]
line-length = 88
target-version = ['py38']
include = '\.pyi?$'

[tool.mypy]
python_version = "3.8"
warn_return_any = true
warn_unused_configs = true
disallow_untyped_defs = true
check_untyped_defs = true

[tool.pylint.messages_control]
disable = [
    "C0111",  # missing-docstring
    "C0103",  # invalid-name
    "R0903",  # too-few-public-methods
] 